<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/add_photo_bar"
        android:id="@+id/ayay"/>


    <LinearLayout
        android:id="@+id/addphoto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="46dp"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ajouter_des_photos2"
            android:textSize="30sp"
            android:textColor="@color/dark_blue"
            android:paddingBottom="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appuyer_sur_le_boutton_pour_ajouter_des_photos"
                android:textSize="20sp"
                android:padding="20dp"/>

            <Button
                android:layout_width="match_parent"
                android:id="@+id/btnPick"
                android:layout_height="wrap_content"
                android:text="@string/ajouter_des_photos"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:background="@color/dark_blue"
                android:padding="16dp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appuyer_sur_le_boutton_pour_prendre_des_photos"
                android:textSize="20sp"
                android:padding="20dp"
                android:layout_marginTop="16dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prendre_des_photos"
                android:id="@+id/btnprd"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:background="@color/dark_blue"
                android:padding="16dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
