<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignalerActivity">

    <!-- Include the custom toolbar -->
    <include
        layout="@layout/signaler_bar"
        android:id="@+id/bar1"/>

    <!-- Main content area -->
    <LinearLayout
        android:id="@+id/main1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="25dp">

        <!-- Problem Type -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_de_probl_me"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:paddingTop="16dp"/>

            <EditText
                android:id="@+id/edit_text_problem_type1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:hint="@string/s_lectionnez_un_type2"
                android:autofillHints="s_lectionnez_un_type2"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:importantForAutofill="yes" />

        </LinearLayout>

        <!-- Contact Email -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adresse_e_mail"
                android:autofillHints="adresse_e_mail"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_text_contact_email"
                android:layout_width="match_parent"
                android:autofillHints="entrez_votre_e_mail"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:hint="@string/entrez_votre_e_mail"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:importantForAutofill="yes" />

        </LinearLayout>

        <!-- Gravity of the Problem -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gravit_du_probl_me"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_text_gravity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:hint="@string/s_lectionnez_une_gravit"
                android:autofillHints="s_lectionnez_une_gravit"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:importantForAutofill="yes" />

        </LinearLayout>

        <!-- Description of the Problem -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_du_probl_me2"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_text_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:autofillHints="edit_text_background"
                android:hint="@string/donnez_votre_descriptif_du_probl_me2"
                android:inputType="textMultiLine"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:importantForAutofill="yes" />

        </LinearLayout>

        <!-- Import Photos Button -->
        <Button
            android:id="@+id/import_photo_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/importer_des_photos2"
            android:textColor="@android:color/white"
            android:background="@color/darkdark_blue"
            android:onClick="onImportPhotoButtonClick" />

        <!-- Accept Terms Checkbox -->
        <CheckBox
            android:id="@+id/accept_terms_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/je_certifie_l_authenticit_des_informations2"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:padding="16dp"
            android:importantForAutofill="no" />

        <!-- Submit Button -->
        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signaler_le_probl_me2"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:background="@color/darkdark_blue"
            android:paddingVertical="16dp" />



    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintBottom_toBottomOf="@+id/bottomNav"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_alignParentBottom="true"
            app:layout_constraintStart_toStartOf="parent">

        </FrameLayout>


        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNav"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_alignParentBottom="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/menu_bottom" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
